remove flux restful API
The flux restful api dependencies move too quickly for it to be a reliable
production service, and further, I do not think it should be hard coded
into the operator. It needs to be totally refactored and then
re-added as an example application
