# api/v1alpha2/minicluster_types.go
@@ -76,11 +76,6 @@ type MiniClusterSpec struct {
 	// +optional
 	ShareProcessNamespace bool `json:"shareProcessNamespace"`
 
-	// Customization to Flux Restful API
-	// There should only be one container to run flux with runFlux
-	// +optional
-	FluxRestful FluxRestful `json:"fluxRestful"`
-
 	// Cleanup the pods and storage when the index broker pod is complete
 	// +kubebuilder:default=false
 	// +default=false
@@ -216,35 +211,6 @@ type MiniClusterStatus struct {
 	// conditions hold the latest Flux Job and MiniCluster states
 	// +listType=atomic
 	Conditions []metav1.Condition `json:"conditions,omitempty"`
-}
-
-type FluxRestful struct {
-
-	// Branch to clone Flux Restful API from
-	// +kubebuilder:default="main"
-	// +default="main"
-	// +optional
-	Branch string `json:"branch,omitempty"`
-
-	// Port to run Flux Restful Server On
-	// +kubebuilder:default=5000
-	// +default=5000
-	// +optional
-	Port int32 `json:"port,omitempty"`
-
-	// Secret key shared between server and client
-	// +optional
-	SecretKey string `json:"secretKey"`
-
-	// These two should not actually be set by a user,
-	// but rather generated by tools and provided
-	// Username to use for RestFul API
-	// +optional
-	Username string `json:"username"`
-
-	// Token to use for RestFul API
-	// +optional
-	Token string `json:"token"`
 }
 
 // Mini Cluster local volumes available to mount (these are on the host)
@@ -786,11 +752,6 @@ func (f *MiniCluster) Validate() bool {
 	}
 	if f.Spec.Flux.Scheduler.QueuePolicy == "" {
 		f.Spec.Flux.Scheduler.QueuePolicy = "fcfs"
-	}
-
-	// Flux Restful default port
-	if f.Spec.FluxRestful.Port == 0 {
-		f.Spec.FluxRestful.Port = 5000
 	}
 
 	// If the MaxSize isn't set, ensure it's equal to the size
