# api/v1alpha2/swagger.json
@@ -198,37 +198,6 @@
         }
       }
     },
-    "FluxRestful": {
-      "type": "object",
-      "properties": {
-        "branch": {
-          "description": "Branch to clone Flux Restful API from",
-          "type": "string",
-          "default": "main"
-        },
-        "port": {
-          "description": "Port to run Flux Restful Server On",
-          "type": "integer",
-          "format": "int32",
-          "default": 5000
-        },
-        "secretKey": {
-          "description": "Secret key shared between server and client",
-          "type": "string",
-          "default": ""
-        },
-        "token": {
-          "description": "Token to use for RestFul API",
-          "type": "string",
-          "default": ""
-        },
-        "username": {
-          "description": "These two should not actually be set by a user, but rather generated by tools and provided Username to use for RestFul API",
-          "type": "string",
-          "default": ""
-        }
-      }
-    },
     "FluxScheduler": {
       "description": "FluxScheduler attributes",
       "type": "object",
@@ -612,11 +581,6 @@
           "description": "Flux options for the broker, shared across cluster",
           "default": {},
           "$ref": "#/definitions/FluxSpec"
-        },
-        "fluxRestful": {
-          "description": "Customization to Flux Restful API There should only be one container to run flux with runFlux",
-          "default": {},
-          "$ref": "#/definitions/FluxRestful"
         },
         "interactive": {
           "description": "Run a single-user, interactive minicluster",
