# api/v1alpha2/zz_generated.openapi.go
@@ -31,7 +31,6 @@ func GetOpenAPIDefinitions(ref common.ReferenceCallback) map[string]common.OpenA
 		"./api/v1alpha2/.ContainerVolume":           schema__api_v1alpha2__ContainerVolume(ref),
 		"./api/v1alpha2/.FluxBroker":                schema__api_v1alpha2__FluxBroker(ref),
 		"./api/v1alpha2/.FluxContainer":             schema__api_v1alpha2__FluxContainer(ref),
-		"./api/v1alpha2/.FluxRestful":               schema__api_v1alpha2__FluxRestful(ref),
 		"./api/v1alpha2/.FluxScheduler":             schema__api_v1alpha2__FluxScheduler(ref),
 		"./api/v1alpha2/.FluxSpec":                  schema__api_v1alpha2__FluxSpec(ref),
 		"./api/v1alpha2/.LifeCycle":                 schema__api_v1alpha2__LifeCycle(ref),
@@ -371,58 +370,6 @@ func schema__api_v1alpha2__FluxContainer(ref common.ReferenceCallback) common.Op
 						SchemaProps: spec.SchemaProps{
 							Description: "Mount path for flux to be at (will be added to path)",
 							Default:     "/mnt/flux",
-							Type:        []string{"string"},
-							Format:      "",
-						},
-					},
-				},
-			},
-		},
-	}
-}
-
-func schema__api_v1alpha2__FluxRestful(ref common.ReferenceCallback) common.OpenAPIDefinition {
-	return common.OpenAPIDefinition{
-		Schema: spec.Schema{
-			SchemaProps: spec.SchemaProps{
-				Type: []string{"object"},
-				Properties: map[string]spec.Schema{
-					"branch": {
-						SchemaProps: spec.SchemaProps{
-							Description: "Branch to clone Flux Restful API from",
-							Default:     "main",
-							Type:        []string{"string"},
-							Format:      "",
-						},
-					},
-					"port": {
-						SchemaProps: spec.SchemaProps{
-							Description: "Port to run Flux Restful Server On",
-							Default:     5000,
-							Type:        []string{"integer"},
-							Format:      "int32",
-						},
-					},
-					"secretKey": {
-						SchemaProps: spec.SchemaProps{
-							Description: "Secret key shared between server and client",
-							Default:     "",
-							Type:        []string{"string"},
-							Format:      "",
-						},
-					},
-					"username": {
-						SchemaProps: spec.SchemaProps{
-							Description: "These two should not actually be set by a user, but rather generated by tools and provided Username to use for RestFul API",
-							Default:     "",
-							Type:        []string{"string"},
-							Format:      "",
-						},
-					},
-					"token": {
-						SchemaProps: spec.SchemaProps{
-							Description: "Token to use for RestFul API",
-							Default:     "",
 							Type:        []string{"string"},
 							Format:      "",
 						},
@@ -1182,13 +1129,6 @@ func schema__api_v1alpha2__MiniClusterSpec(ref common.ReferenceCallback) common.
 							Format:      "",
 						},
 					},
-					"fluxRestful": {
-						SchemaProps: spec.SchemaProps{
-							Description: "Customization to Flux Restful API There should only be one container to run flux with runFlux",
-							Default:     map[string]interface{}{},
-							Ref:         ref("./api/v1alpha2/.FluxRestful"),
-						},
-					},
 					"cleanup": {
 						SchemaProps: spec.SchemaProps{
 							Description: "Cleanup the pods and storage when the index broker pod is complete",
@@ -1240,7 +1180,7 @@ func schema__api_v1alpha2__MiniClusterSpec(ref common.ReferenceCallback) common.
 			},
 		},
 		Dependencies: []string{
-			"./api/v1alpha2/.FluxRestful", "./api/v1alpha2/.FluxSpec", "./api/v1alpha2/.LoggingSpec", "./api/v1alpha2/.MiniClusterArchive", "./api/v1alpha2/.MiniClusterContainer", "./api/v1alpha2/.MiniClusterUser", "./api/v1alpha2/.MiniClusterVolume", "./api/v1alpha2/.Network", "./api/v1alpha2/.PodSpec"},
+			"./api/v1alpha2/.FluxSpec", "./api/v1alpha2/.LoggingSpec", "./api/v1alpha2/.MiniClusterArchive", "./api/v1alpha2/.MiniClusterContainer", "./api/v1alpha2/.MiniClusterUser", "./api/v1alpha2/.MiniClusterVolume", "./api/v1alpha2/.Network", "./api/v1alpha2/.PodSpec"},
 	}
 }
 
